// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.models.products should call GetLowestPricedOffersForASIN 1`] = `
{
  "asin": "1933890517",
  "identifier": {
    "asin": "1933890517",
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "sellerSku": null,
    "timeOfOfferChange": null,
  },
  "itemCondition": "New",
  "marketplaceId": "ATVPDKIKX0DER",
  "offers": [],
  "status": "NoBuyableOffers",
  "summary": {
    "buyBoxEligibleOffers": [],
    "buyBoxPrices": [],
    "competitivePriceThreshold": null,
    "listPrice": null,
    "lowestPrices": [],
    "numberOfOffers": [],
    "offersAvailableTime": null,
    "salesRankings": [],
    "suggestedLowerPricePlusShipping": null,
    "totalOfferCount": 0,
  },
}
`;

exports[`lib.client.models.products should call GetLowestPricedOffersForSKU 1`] = `
{
  "identifier": {
    "asin": null,
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "sellerSku": "SKU2468",
    "timeOfOfferChange": null,
  },
  "itemCondition": "new",
  "marketplaceId": "ATVPDKIKX0DER",
  "offers": [],
  "sku": "SKU2468",
  "status": "NoOfferDueToMissingShippingCharge",
  "summary": {
    "buyBoxEligibleOffers": [],
    "buyBoxPrices": [],
    "competitivePriceThreshold": null,
    "listPrice": null,
    "lowestPrices": [],
    "numberOfOffers": [],
    "offersAvailableTime": null,
    "salesRankings": [],
    "suggestedLowerPricePlusShipping": null,
    "totalOfferCount": 0,
  },
}
`;

exports[`lib.client.models.products should call GetMyPriceForASIN 1`] = `
[
  {
    "asin": "1933890517",
    "error": null,
    "product": {
      "attributes": null,
      "identifiers": {
        "marketplaceAsin": {
          "asin": "1933890517",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": null,
      },
      "offers": [
        {
          "buyingPrice": {
            "landedPrice": {
              "amount": 303.99,
              "currencyCode": "USD",
            },
            "listingPrice": {
              "amount": 300,
              "currencyCode": "USD",
            },
            "shipping": {
              "amount": 3.99,
              "currencyCode": "USD",
            },
          },
          "fulfillmentChannel": "MERCHANT",
          "itemCondition": "Used",
          "itemSubCondition": "Acceptable",
          "regularPrice": {
            "amount": 300,
            "currencyCode": "USD",
          },
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSku": "SKU2468",
        },
      ],
      "relationships": {
        "variationChildren": [],
        "variationParent": null,
      },
      "salesRankings": [],
    },
    "status": "Success",
  },
]
`;

exports[`lib.client.models.products should call GetMyPriceForSKU 1`] = `
[
  {
    "error": null,
    "product": {
      "attributes": null,
      "identifiers": {
        "marketplaceAsin": {
          "asin": "1933890517",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": {
          "marketplaceId": "ATVPDKIKX0DER",
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSKU": "SKU2468",
        },
      },
      "offers": [
        {
          "buyingPrice": {
            "landedPrice": {
              "amount": 303.99,
              "currencyCode": "USD",
            },
            "listingPrice": {
              "amount": 300,
              "currencyCode": "USD",
            },
            "shipping": {
              "amount": 3.99,
              "currencyCode": "USD",
            },
          },
          "fulfillmentChannel": "MERCHANT",
          "itemCondition": "Used",
          "itemSubCondition": "Acceptable",
          "regularPrice": {
            "amount": 300,
            "currencyCode": "USD",
          },
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSku": "SKU2468",
        },
      ],
      "relationships": {
        "variationChildren": [],
        "variationParent": null,
      },
      "salesRankings": [],
    },
    "sellerSku": "SKU2468",
    "status": "Success",
  },
]
`;

exports[`lib.client.models.products should call GetProductCategoriesForASIN 1`] = `
{
  "categories": [
    {
      "parent": {
        "parent": {
          "parent": {
            "parent": {
              "parent": {
                "parent": {
                  "parent": null,
                  "productCategoryId": "3375251",
                  "productCategoryName": "Categories",
                },
                "productCategoryId": "3375301",
                "productCategoryName": "Categories",
              },
              "productCategoryId": "2232464011",
              "productCategoryName": "Bikes & Scooters",
            },
            "productCategoryId": "3403201",
            "productCategoryName": "Bikes & Accessories",
          },
          "productCategoryId": "2371051011",
          "productCategoryName": "Clothing",
        },
        "productCategoryId": "2419332011",
        "productCategoryName": "Men",
      },
      "productCategoryId": "2420095011",
      "productCategoryName": "Compression Shorts",
    },
  ],
}
`;

exports[`lib.client.models.products should call GetProductCategoriesForSKU 1`] = `
{
  "categories": [
    {
      "parent": {
        "parent": {
          "parent": {
            "parent": {
              "parent": null,
              "productCategoryId": "283155",
              "productCategoryName": "Subjects",
            },
            "productCategoryId": "1000",
            "productCategoryName": "Subjects",
          },
          "productCategoryId": "3",
          "productCategoryName": "Business & Investing",
        },
        "productCategoryId": "2675",
        "productCategoryName": "Management & Leadership",
      },
      "productCategoryId": "271578011",
      "productCategoryName": "Project Management",
    },
    {
      "parent": {
        "parent": {
          "parent": {
            "parent": {
              "parent": null,
              "productCategoryId": "283155",
              "productCategoryName": "Specialty Boutique",
            },
            "productCategoryId": "2349030011",
            "productCategoryName": "Specialty Boutique",
          },
          "productCategoryId": "465600",
          "productCategoryName": "New, Used & Rental Textbooks",
        },
        "productCategoryId": "468220",
        "productCategoryName": "Business & Finance",
      },
      "productCategoryId": "684248011",
      "productCategoryName": "Management",
    },
  ],
}
`;

exports[`lib.client.models.products should call ListMatchingProducts 1`] = `
{
  "products": [
    {
      "attributes": {
        "authors": [
          "Rowling, J.K.",
        ],
        "binding": "Paperback",
        "brand": "Scholastic Press",
        "creators": [
          {
            "name": "GrandPrÃ©, Mary",
            "role": "Illustrator",
          },
        ],
        "edition": "1st",
        "features": [
          "Recommended Age: 9 years and up",
        ],
        "isAutographed": false,
        "isMemorabilia": false,
        "itemDimensions": {
          "height": {
            "unit": "inches",
            "value": 0.8,
          },
          "length": {
            "unit": "inches",
            "value": 7.5,
          },
          "weight": {
            "unit": "pounds",
            "value": 0.5,
          },
          "width": {
            "unit": "inches",
            "value": 5.2,
          },
        },
        "label": "Scholastic Paperbacks",
        "languages": [
          {
            "audioFormat": null,
            "name": "english",
            "type": "Unknown",
          },
          {
            "audioFormat": null,
            "name": "english",
            "type": "Original Language",
          },
          {
            "audioFormat": null,
            "name": "english",
            "type": "Published",
          },
        ],
        "listPrice": {
          "amount": 10.99,
          "currencyCode": "USD",
        },
        "manufacturer": "Scholastic Paperbacks",
        "numberOfItems": 1,
        "numberOfPages": 320,
        "packageDimensions": {
          "height": {
            "unit": "inches",
            "value": 1,
          },
          "length": {
            "unit": "inches",
            "value": 7.5,
          },
          "weight": {
            "unit": "pounds",
            "value": 0.5,
          },
          "width": {
            "unit": "inches",
            "value": 5.2,
          },
        },
        "packageQuantity": 1,
        "partNumber": "9780590353427",
        "productGroup": "Book",
        "productTypeName": "ABIS_BOOK",
        "publicationDate": 1999-10-01T00:00:00.000Z,
        "publisher": "Scholastic Paperbacks",
        "releaseDate": 1999-09-08T00:00:00.000Z,
        "smallImage": {
          "height": {
            "unit": "pixels",
            "value": 75,
          },
          "url": "http://ecx.images-amazon.com/images/I/51MU5VilKpL._SL75_.jpg",
          "width": {
            "unit": "pixels",
            "value": 51,
          },
        },
        "studio": "Scholastic Paperbacks",
        "title": "Harry Potter and the Sorcerer's Stone (Book 1)",
      },
      "identifiers": {
        "marketplaceAsin": {
          "asin": "059035342X",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": null,
      },
      "offers": [],
      "relationships": {
        "variationChildren": [],
        "variationParent": null,
      },
      "salesRankings": [
        {
          "productCategoryId": "book_display_on_website",
          "rank": 401,
        },
        {
          "productCategoryId": "15356791",
          "rank": 5,
        },
        {
          "productCategoryId": "3153",
          "rank": 8,
        },
        {
          "productCategoryId": "17468",
          "rank": 16,
        },
      ],
    },
  ],
}
`;

exports[`lib.client.models.products should handle GetLowestPricedOffersForASIN errors 1`] = `
{
  "error": {
    "asin": "1933890517",
    "code": "InvalidParameterValue",
    "detail": null,
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "message": "1933890517 is an invalid ASIN for marketplace ATVPDKIKX0DER",
    "status": "ClientError",
    "type": "Sender",
  },
  "responseMetadata": {
    "requestId": "bc6e4601-3d74-4612-adcf-EXAMPLEf1796",
  },
}
`;

exports[`lib.client.models.products should handle GetLowestPricedOffersForSKU errors 1`] = `
{
  "error": {
    "code": "InvalidParameterValue",
    "detail": null,
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "message": "SKU2468 is an invalid SKU for marketplace ATVPDKIKX0DER",
    "sku": "SKU2468",
    "status": "ClientError",
    "type": "Sender",
  },
  "responseMetadata": {
    "requestId": "bc6e4601-3d74-4612-adcf-EXAMPLEf1796",
  },
}
`;
